--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ theme = "hugo-theme-shell"
   # ./[folderName]/
   # ...
   # Note: result of the tree command
-  userName = "jane"
+  userName = "sybilscan"
   pcName = "laptop"
   workDir = "mydir"
   profile = "profile.txt"
