--- a/config.toml
+++ b/config.toml
@@ -70,6 +70,6 @@ theme = "hugo-theme-shell"
   # Note: ["ACTIVITY", "URL or PATH TO YOUR MARKDOWN FILE"]
   files = [ 
     ["Research", "https://www.example.com/"],
-    #["", "https://www.example.com/"],
+    ["Press", "https://www.example.com/"],
  ,
   ]
