--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://golden-cascaron-8e6675.netlify.app/"
 languageCode = "en-us"
-title = "Sybil Scan Research"
+title = "Sybil Scan"
 theme = "hugo-theme-shell"
 
 
@@ -70,6 +70,8 @@ theme = "hugo-theme-shell"
   # Note: ["ACTIVITY", "URL or PATH TO YOUR MARKDOWN FILE"]
   files = [ 
     ["Research", "https://www.example.com/"],
-    ["Press ", "https://www.example.com/"]
+    ["Press ", "https://www.example.com/"],
+    ["Twitter", "https://twitter.com/sybilscan"],
+    ["Mail" : "research@sybilscan.com"]
   ]
   
