--- a/config.toml
+++ b/config.toml
@@ -66,7 +66,7 @@ theme = "hugo-theme-shell"
 
   [Params.Tree]
   use = true
-  folderName = "/home"
+  folderName = "links"
   # Note: ["ACTIVITY", "URL or PATH TO YOUR MARKDOWN FILE"]
   files = [ 
     ["🔬 Research", "https://www.example.com/"],
