--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ theme = "hugo-theme-shell"
 
 [Params]
   # Note: This is for the meta description, which is different from the "description" displayed in the terminal.
-  description = "Sybil Scan"
+  description = "Sybil Scan Research"
   [Params.Terminal]
   # Note: color scheme
   # Note: You can choose between
